# test_openvino

./: CMakeLists.txt  README.md  test_openvino.cpp
